--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="mx-auto">Happy Birthday Shourya Gaurav</h1>
+      <h1 class="mx-auto">Happy Birthday Gopal</h1>
       <p id="canvas"></p>
 
       <button type="button" class="btn btn-outline-secondary waves-effect px-3 bulb" onclick="btnChange()"><img id="bulbId"src="img/lightoff.png" alt="" height="30px", width="30px"></button>
