--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <button type="button" class="btn btn-outline-secondary waves-effect px-3 fireworks"><img src="img/firework.png" alt="" height="30px", width="30px" ></button>
       <button type="button" class="btn btn-outline-secondary waves-effect px-3 ballon"><img src="img/balloons.png" alt=""  height="30px", width="30px"></button>
       <button type="button" class="btn btn-outline-secondary waves-effect px-3 music"><img src="img/music.png" alt=""  height="30px", width="30px"></button>
-      <button type="button" class="btn btn-outline-secondary waves-effect px-3 comment"><img src="img/comments.png" alt=""  height="30px", width="30px"></button>
+<!--       <button type="button" class="btn btn-outline-secondary waves-effect px-3 comment"><img src="img/comments.png" alt=""  height="30px", width="30px"></button> -->
     </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
